refactor: replace fastjson with jackson3